usbredirserver/usbredirtestclient: Fix build on FreeBSD

Add some missing includes necessary to get things to build on FreeBSD.

BugLink: https://bugs.freedesktop.org/show_bug.cgi?id=88936
Signed-off-by: Hans de Goede <hdegoede@redhat.com>